gcc/testsuite/gdc.test/compilable/imports/ice10598b.d
module imports.ice10598b;

struct LocalType {}
