gcc/testsuite/gdc.test/fail_compilation/imports/a18219.d
module a18219;

struct AST
{
    import b18219;
}
